# cue

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  HebrewSubtitleGUI.spec  INSTALLER_TERMS.txt  LICENSE  PRIVACY.md  README.md  TERMS.md  THIRD_PARTY_NOTICES.md  build_exe.bat  download_ffmpeg.bat  download_ffmpeg.ps1  package-lock.json  package.json  pyproject.toml  requirements-backend-dev.txt  requirements-dev.txt  requirements.txt  run_app.py  run_runner.py
.github/: PULL_REQUEST_TEMPLATE.md
app/: align_utils.py  align_worker.py  alignment_words.py  ass_karaoke.py  ass_render.py  backend_inprocess_worker.py  backend_pipeline_adapter.py  backend_server.py  burn_in_export.py  config.py  ffmpeg_utils.py  graphics_overlay_export.py  graphics_preview_renderer.py  karaoke_utils.py  main.py  media_formats.py  paths.py  preview_overlay.py  preview_playback.py  progress.py  project_store.py  punctuation_stats.py  qt_worker_runner.py  srt_ass_burnin.py  srt_splitter.py  srt_utils.py  subtitle_fonts.py  subtitle_style.py  time_format.py  transcribe_worker.py  transcription_config.py  transcription_device.py  transcription_rtf.py  word_highlight_ass.py  word_timing_schema.py  worker_runner.py  workers.py
desktop/: README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
desktop/src-tauri/: 2  Cargo.toml  cue-engine-parts.json  installer-hooks.nsh  tauri.conf.json
desktop/src-tauri/capabilities/: main.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/nsis/: installer.nsi
desktop/src-tauri/src/: main.rs
docs/: ARCHITECTURE.md  CAPTION_GRAPHICS_OVERLAY_PLAN.md  CLA_POLICY.md  CONTRIBUTING.md  ROADMAP.md  (+9 more)
(+202 files in other folders)
