[package]
name = "cue-desktop"
description = "Cue desktop app — create subtitles for any video using AI speech recognition"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["protocol-asset", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-mcp-bridge = "0.8"
tauri-plugin-opener = "2"
zip = "7.4.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
